# micritebench

./: .gitignore  Cargo.toml  README.md  alignment_strategies.csv  genomes.csv
genomes/: ebv.fna.fai  metagenome.fna.amb  metagenome.fna.ann  test.fna  test.fna.0123  test.fna.bwt.2bit.64  test.fna.fai  test.fna.pac
outdir/: ebv_1000_hpv16_40.R1.fq  ebv_1000_hpv16_40.R2.fq  ebv_1000_hpv16_40.metagenome.bwamem2.bam  ebv_1000_hpv16_40.test.bwamem2.bam  ebv_100_hpv16_30.R1.fq  ebv_100_hpv16_30.R2.fq  ebv_100_hpv16_30.metagenome.bwamem2.bam  ebv_100_hpv16_30.test.bwamem2.bam  ebv_10_hpv16_20.R1.fq  ebv_10_hpv16_20.R2.fq  ebv_10_hpv16_20.metagenome.bwamem2.bam  ebv_10_hpv16_20.test.bwamem2.bam
src/: alignment.rs  datastructures.rs  lib.rs  main.rs  simulation.rs  utils.rs
wix/: main.wxs
workdir/: test_100.R1.fq  test_100.R2.fq  test_100.pre_subsample.R1.fq  test_100.pre_subsample.R2.fq
